Adding Heroku website

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -9,7 +9,7 @@
   }
   
   body {
-    background-image: url('/public/images/Tech\ Blog.jpg');
+    background-image: url('/public/images/TechBlog.jpg');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
